// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sync components #1 1`] = `<div />`;

exports[`sync components #1 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`sync components #2 1`] = `<div />`;

exports[`sync components #2 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`sync components #3 1`] = `<div />`;

exports[`sync components #3 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`sync components #4 1`] = `<span />`;

exports[`sync components #4 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`sync components #5 1`] = `<div />`;

exports[`sync components #5 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;

exports[`sync components #6 1`] = `<span />`;

exports[`sync components #6 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`sync components #7 1`] = `<div />`;

exports[`sync components #7 2`] = `
Object {
  "appendChild": 0,
  "createElement": 2,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 1,
}
`;

exports[`sync components #8 1`] = `<div />`;

exports[`sync components #8 2`] = `
Object {
  "appendChild": 0,
  "createElement": 1,
  "createElementNS": 0,
  "createTextNode": 0,
  "insertBefore": 1,
  "removeChild": 0,
  "replaceChild": 0,
}
`;
